--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -131,6 +131,18 @@
 </div>
 
 <br>
+
+
+<hr>
+<div class="update-msg">
+    <h4><b>Other Tools:</b></h4>
+    <a class="tools-icon-a" href="{% url 'tf_tools' %}"><div class="btn btn-default btn-other-tools"><img class="tools-icon" src="{% static 'Images/tf_tools.png' %}">TF Tools</div></a>
+    <a class="tools-icon-a" href="{% url 'id_conversion' %}"><div class="btn btn-default btn-other-tools"><img class="tools-icon" src="{% static 'Images/id_converter.png' %}">ID Converter</div></a>
+</div>
+
+
+<br>
+<br>
 <hr>
 <div class="update-msg">
     <span class="glyphicon glyphicon-bullhorn"></span>&nbsp&nbsp&nbsp PlanNET has been updated to version 1.3. See <a href="{% url 'about' %}#update-notes" title="Update notes">update notes</a>.
