--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -135,7 +135,8 @@
 
 <hr>
 <div class="update-msg">
-    <h4><b>Other Tools:</b></h4>
+    <h3>Other Tools:</h3>
+    <br>
     <a class="tools-icon-a" href="{% url 'tf_tools' %}"><div class="btn btn-default btn-other-tools"><img class="tools-icon" src="{% static 'Images/tf_tools.png' %}">TF Tools</div></a>
     <a class="tools-icon-a" href="{% url 'id_conversion' %}"><div class="btn btn-default btn-other-tools"><img class="tools-icon" src="{% static 'Images/id_converter.png' %}">ID Converter</div></a>
 </div>
