--- a/NetExplorer/templates/NetExplorer/tf_search_results.html
+++ b/NetExplorer/templates/NetExplorer/tf_search_results.html
@@ -9,6 +9,7 @@
     <div class="panel-body">
     <!-- Small searchpanel for each gene in results -->
 
+    <p><b>Number of genes:</b> {{ numgenes }}</p>
     <div class="btn btn-default" id="download-tf-genes-csv" data="{{ genelist }}">Download CSV</div>
 
 
